--- a/blog/app/views/posts/new.html.erb
+++ b/blog/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Post</h1>
 
-<%= form_for :post do |f| %>
+<%= form_for :post, url: posts_path do |f| %>
     <p>
     <%= f.label :title %><br>
     <%= f.text_field :title %>
@@ -15,3 +15,5 @@
     <%= f.submit %>
     </p>
 <% end %>
+
+<%= link_to "Back", posts_path %>
